--- a/src/components/searchpage/searchpage.css
+++ b/src/components/searchpage/searchpage.css
@@ -3,7 +3,7 @@
 }
 .spname{
     align-items: center;
-    /* justify-content: center; */
+    justify-content: center;
     display: flex;
-    /* margin:1rem 2rem; */
+    margin:1rem;
 }
