--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -7,8 +7,17 @@
     text-decoration: none;
     /* color: white; */
 }
-.icon{
+.icon a{
+    display: flex;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: bold;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     color: azure;
+}
+.icon p{
+    color: aliceblue;
 }
 .item{
     margin:0 4rem;
@@ -22,7 +31,7 @@
     align-items: center;
 }
 .form{
-    width: 17rem;
+    width: 30rem;
     border-radius: 1rem;
     background-color: red;
     border:.1rem solid white
@@ -68,7 +77,7 @@
     
     /* border-radius: 1rem; */
     height:2rem;
-    width: 75%;
+    width: 85%;
     margin-right: 4px;
     border:.1rem solid black;
 }
@@ -88,14 +97,32 @@
     justify-content: center;
     display: none;
 }
-@media(max-width:776px){
-    .form{
-        width: 11rem;
+@media(max-width:826px){
+    .form {
+        width: 20rem;
+        margin-left: 5rem;
     }
     .form input{
-        width: 70%;
+        width:80%;
     }
 }
+@media(max-width:666px){
+    .form {
+        width: 18rem
+    }
+    .form input{
+        width:80%;
+    }
+}
+@media(max-width:576px){
+    .form {
+        width: 15rem
+    }
+    .form input{
+        width:70%;
+    }
+}
+
 @media (max-width:500px){
     .choice{
         display: block;
@@ -109,9 +136,20 @@
         display: none;
     }
 }
-@media(max-width:400px){
+@media(max-width:410px){
     .form{
-        width:7rem;
+        width:10rem;
+    }
+    .form input{
+        width: 70%;
+    }
+    .form button{
+        width: 2rem;
+    }
+}
+@media(max-width:330px){
+    .form{
+        width:8rem;
     }
     .form input{
         width: 60%;
