--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,7 +1,9 @@
 .img1{
     height:2rem;
     width:3rem;
+    border-radius: 50%;
     cursor: pointer;
+    margin:0 0.5rem;
 }
 .navbar a{
     text-decoration: none;
